# stario

./: .dockerignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
benchmark/: .gitignore  README.md  run.sh  validate.lua
benchmarks/: README.md
examples/: README.md  manifest.json
examples/chat-room/: README.md  main.py  pyproject.toml
examples/chat-room/app/: __init__.py  assets.py  config.py  db.py  main.py
examples/chat-room/app/about/: __init__.py  handlers.py  router.py
examples/chat-room/app/chat/: __init__.py  db.py  handlers.py  models.py  relay_topics.py  router.py  views.py
examples/chat-room/app/common/: __init__.py  identity.py  shell.py
examples/chat-room/app/features/: __init__.py
examples/chat-room/app/features/lobby/: __init__.py  handlers.py  signals.py  subjects.py  urls.py  views.py
examples/chat-room/app/features/room/: __init__.py  data.py  handlers.py  models.py  signals.py  subjects.py  urls.py  views.py
examples/chat-room/app/static/css/: style.css
examples/chat-room/tests/: conftest.py  test_assets.py  test_chat_room.py  test_lobby.py  test_room.py
tests/: __init__.py  helpers.py  test_app.py  test_bootstrap.py  test_cli_env.py  test_cli_imports.py  test_cli_main.py  test_cli_runtime.py  test_cli_tracers.py  test_compression.py  test_config.py  test_cookies.py  test_datastar.py  test_dependencies.py  test_env.py  test_exceptions.py  test_headers.py  test_html.py  test_http_protocol_hardening.py  test_locations.py  test_markup.py  test_package_exports.py  test_query.py  test_redirect.py  test_relay.py  test_request.py  test_router.py  test_segment.py  test_server.py  test_signals.py  test_staticassets.py  test_telemetry_imports.py  (+15 more)
(+144 files in other folders)
