[project]
name = "stario"
version = "3.2.0"
description = "Stario - Bringing back the joy of web development"
readme = "README.md"
authors = [
    { name = "Adam Bobowski", email = "adam.bobowski@wratilabs.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "brotli>=1.1.0",
    "httptools>=0.7.1",
    "xxhash>=3.5.0",
    "watchfiles>=1.1.0",
]

[project.scripts]
stario = "stario.cli:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
