[project]
name = "chat-room"
version = "0.0.0"
description = "Stario chat-room example application"
requires-python = ">=3.14"
dependencies = [
    "stario>=3,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
