[project]
name = "chat-room"
version = "0.0.0"
description = "Stario multi-room chat — larger-app example (app.main:bootstrap)"
requires-python = ">=3.14"
dependencies = [

]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
